--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="author" content="Flatiron School">
 </head>
 <body>
-  hello
+  hello :D
+  <script src="/index.js"></script>
 </body>
 </html>
